# sheepstor_rust

./: .gitignore  Cargo.toml  README.md
http_clients_requests/: http-client.env.json  ingest.http  ingest2.http  ingest_to_LIVE_dev_server.http
src/: cli.rs  git.rs  ingest.rs  logging.rs  main.rs  server.rs  trigger_update.rs  utilities.rs  website.rs  website_builders.rs  website_registry.rs
