[package]
name = "sheepstor"
version = "0.3.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4.27"
clap = { version = "4.5.41", features = ["derive"] }
flexi_logger = { version = "0.31.2", features = ["colors"] }
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "rt"] }
hex = "0.4.3"
secrecy = "0.10.3"
hmac = "0.12.1"
sha2 = "0.10.9"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
